--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Walter <walterr@live.cn>",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
     "gatsby": "^2.3.3",
     "gatsby-image": "^2.0.35",
     "gatsby-plugin-catch-links": "^2.0.13",
@@ -19,7 +20,8 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-motion-drawer": "^3.1.0"
   },
   "devDependencies": {
     "gatsby-plugin-less": "^2.0.12",
