--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "gatsby": "^2.3.3",
+    "gatsby-background-image": "^0.6.2",
     "gatsby-image": "^2.0.35",
     "gatsby-plugin-catch-links": "^2.0.13",
     "gatsby-plugin-manifest": "^2.0.25",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.11",
-    "gatsby-plugin-sharp": "^2.0.32",
+    "gatsby-plugin-sharp": "^2.1.2",
     "gatsby-source-filesystem": "^2.0.28",
-    "gatsby-transformer-sharp": "^2.1.17",
+    "gatsby-transformer-sharp": "^2.1.20",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
