--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "gatsby-plugin-react-helmet": "^3.0.11",
     "gatsby-plugin-sharp": "^2.1.2",
     "gatsby-source-filesystem": "^2.0.28",
+    "gatsby-source-s3-image": "^1.2.36",
+    "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.20",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
